# flame-tensor

./: .gitignore  Cargo.toml  README.md
benches/: tensor_bench.rs
src/: lib.rs
src/autodiff/: gradient.rs  mod.rs  ops.rs  tape.rs  var.rs
src/backend/: cpu.rs  cuda.rs  mod.rs
src/nn/: activation.rs  attention.rs  conv.rs  dropout.rs  embedding.rs  linear.rs  mod.rs  module.rs  norm.rs  sequential.rs  transformer.rs
src/optim/: adam.rs  mod.rs  scheduler.rs  sgd.rs
src/serialize/: mod.rs  safetensors.rs
src/tensor/: broadcast.rs  creation.rs  dtype.rs  index.rs  mod.rs  ops.rs  reduce.rs  storage.rs  tensor.rs  view.rs
tests/: advanced_tests.rs  autodiff_tests.rs  nn_tests.rs  tensor_tests.rs
