[package]
name = "flame-tensor"
version = "0.1.0"
edition = "2021"
description = "A full tensor framework in Rust — le nouveau torch"
license = "MIT"

[features]
default = ["cpu"]
cpu = []
cuda = []

[dependencies]
half = "2"
num-traits = "0.2"
num-integer = "0.1"
bytemuck = { version = "1", features = ["derive"] }
safetensors = "0.4"
rayon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "tensor_bench"
harness = false
